tests/neg-macros/annot-mod-class-add-top-val/Test_2.scala
@addTopLevelVal // error
class Foo

@addTopLevelVal // error
object Foo
